<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layFormBilling"
            style="@style/MatchWrapLayout"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/MatchWrapLayout"
                android:layout_marginTop="5dp"
                android:text="@string/label_billing_details"
                android:textColor="#454545"
                android:textSize="16sp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary" />

            <TableLayout
                style="@style/MatchMatchLayout"
                android:padding="10dp"
                android:shrinkColumns="*"
                android:stretchColumns="*">

                <TableRow>

                    <TextView
                        android:layout_width="50dp"
                        android:gravity="left"
                        android:text="@string/label_full_name"
                        android:textColor="#454545"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/edtNama"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:textSize="14sp" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="80dp"
                        android:gravity="left"
                        android:text="@string/label_address"
                        android:textColor="#454545"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/edtAlamat"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:gravity="start"
                        android:inputType="textMultiLine"
                        android:textSize="14sp" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="80dp"
                        android:gravity="left"
                        android:text="@string/label_telp"
                        android:textColor="#454545"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/edtTelp"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:textSize="14sp" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="80dp"
                        android:gravity="left"
                        android:text="@string/label_email"
                        android:textColor="#454545"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:textSize="14sp" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="80dp"
                        android:gravity="left"
                        android:text="@string/label_notes"
                        android:textColor="#454545"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/edtNotes"
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:gravity="start"
                        android:inputType="textMultiLine"
                        android:textSize="14sp" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/frBatasPesanan"
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:layout_below="@+id/layFormBilling"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#454545" />

        <TextView
            android:id="@+id/txtPesananAnda"
            style="@style/MatchWrapLayout"
            android:layout_below="@+id/frBatasPesanan"
            android:layout_marginTop="3dp"
            android:padding="10dp"
            android:text="Pesanan Anda"
            android:textColor="#454545"
            android:textSize="16sp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/frPesananAnda"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/txtPesananAnda"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:background="@color/colorPrimary" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvCheckout"
            style="@style/MatchWrapLayout"
            android:layout_below="@+id/frPesananAnda"/>
        <LinearLayout
            android:id="@+id/layGrandTotal"
            style="@style/MatchWrapLayout"
            android:layout_below="@+id/rvCheckout"
            android:background="@color/flat_clouds"
            android:orientation="vertical">

            <TableLayout
                style="@style/MatchWrapLayout"
                android:layout_margin="7dp"
                android:stretchColumns="1">

                <TableRow>

                    <TextView
                        android:layout_width="100dp"
                        android:layout_column="1"
                        android:text="Grand Total"
                        android:textColor="#454545"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtGrandTotal"
                        android:layout_column="1"
                        android:gravity="right"
                        android:text="Rp -"
                        android:textColor="#454545"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layMethod"
            style="@style/MatchMatchLayout"
            android:layout_below="@+id/layGrandTotal"
            android:orientation="vertical">

            <LinearLayout
                style="@style/MatchWrapLayout"
                android:layout_marginTop="7dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtPaymentMethod"
                    style="@style/MatchWrapLayout"
                    android:layout_marginLeft="7dp"
                    android:padding="5dp"
                    android:text="@string/label_payment_method"
                    android:textColor="#454545"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/colorPrimary" />

                <RadioGroup
                    android:id="@+id/rgPaymentMethod"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <RadioButton
                        android:id="@+id/rbCod"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Cash On Delivery" />

                    <RadioButton
                        android:id="@+id/rbTransfer"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Transfer Bank" />

                </RadioGroup>

            </LinearLayout>
        </LinearLayout>
        <!--<FrameLayout
            android:id="@+id/frBatasMetode"
            android:layout_width="match_parent"
            android:layout_height="0.25dp"
            android:layout_below="@+id/layMethod"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#454545" />-->
        <LinearLayout
            style="@style/MatchWrapLayout"
            android:layout_below="@+id/layMethod"
            android:orientation="vertical"
            android:padding="10dp">

            <!--  <TableLayout
                  style="@style/MatchWrapLayout"
                  android:stretchColumns="1">

                  <TableRow>

                      <TextView
                          android:layout_width="100dp"
                          android:layout_column="1"
                          android:text="Grand Total"
                          android:textColor="#454545"
                          android:textSize="14sp"
                          android:textStyle="bold" />

                      <TextView
                          android:id="@+id/txtGrandTotal"
                          android:layout_column="1"
                          android:gravity="right"
                          android:text="Rp -"
                          android:textColor="#454545"
                          android:textSize="14sp"
                          android:textStyle="bold" />
                  </TableRow>
              </TableLayout>-->

            <Button
                android:id="@+id/btnConfrimOrder"
                style="@style/MatchWrapLayout"
                android:layout_marginTop="5dp"
                android:text="Buat Pesanan"
                android:theme="@style/ButtonColoredPrimary" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>